<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateStudentAccount">

    <EditText
        android:id="@+id/TUIDtxtBox"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="TUID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/firstNameTxtBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/emailTxtBox"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="temple email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordTxtBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTxtBox" />

    <EditText
        android:id="@+id/lastNameTxtBox"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="last name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/emailTxtBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTxtBox" />

    <Button
        android:id="@+id/registerStudentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="172dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxtBox" />

    <EditText
        android:id="@+id/firstNameTxtBox"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="first name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lastNameTxtBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TUIDtxtBox" />

    <EditText
        android:id="@+id/passwordTxtBox"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerStudentBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxtBox" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="65dp"
        android:text="Student Registration"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/TUIDtxtBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>