...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountType">

    <ImageView
        android:id="@+id/studentAccPic"
        android:layout_width="146dp"
        android:layout_height="0dp"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/studentText"
        app:layout_constraintEnd_toEndOf="parent"
...
