<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_weight="15"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            app:srcCompat="@drawable/autoattendlogo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/emailTxtBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/passwordTxtBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/createAccount"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:text="Register"
            android:background="@drawable/button_filled"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical">
        </Button>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:text="Login"
            android:textColor="@color/blue"
            android:background="@drawable/button_outline"
            android:layout_gravity="center_vertical">
        </Button>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>