<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuDelete"
        android:title="Remove" />


    <item
        android:id="@+id/menuModify"
        android:title="Modify"
        />

    <item
        android:id="@+id/menuViewCode"
        android:title="View Code" />
</menu>